--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@
 *.pdb
 *.user
 *.filters
+/Advanced-study/.vs/Advanced-study/FileContentIndex/09a3154c-973b-419f-ab5c-9122bbd6d5c3.vsidx
+/Advanced-study/.vs/Advanced-study/FileContentIndex/535d31ca-2c28-4712-858d-95824209866f.vsidx
+/Advanced-study/.vs/Advanced-study/FileContentIndex/7ed42395-2c01-441c-a714-b61b60b4f65d.vsidx
+/Advanced-study/.vs/Advanced-study/FileContentIndex/a35ac8e8-b486-48a3-b0a3-399998c1cb68.vsidx
+/Advanced-study/.vs/Advanced-study/FileContentIndex/b3b7db39-0784-4b3b-bf26-00b7520e9be7.vsidx
+/Advanced-study/.vs/Advanced-study/v17/Preview/ipch/AutoPCH/f19affa98df1efd6/FILEMANAGER.ipch
