Implementação da função login

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,24 @@
 *.txt
 *.props
 *.targets
+*.v2
+*.ipch
+*.tlog
+*.recipe
+/Advanced-study/Advanced-study/Debug/Advanced-study.log
+/Advanced-study/Advanced-study/Debug/vcpkg.applocal.log
+*.idb
+*.obj
+*.ilk
+/Advanced-study/Advanced-study/x64/Debug/FileManager.obj
+*.enc
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/appsettings.Development.json
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/appsettings.json
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Bank-service-system.deps.json
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Bank-service-system.dll
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Bank-service-system.runtimeconfig.json
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Bank-service-system.staticwebassets.endpoints.json
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Microsoft.OpenApi.dll
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+/Advanced-study/Bank-service-system/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
